src/objects/Customer_Pricing__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Pricing</relationshipLabel>
        <relationshipName>Product_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Price__c</fullName>
        <label>Group Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medicare_Price__c</fullName>
        <label>Medicare Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <description>Defaults to the Model Description field from the Product table</description>
        <formula>Model_Number__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model #</label>
        <referenceTo>Product_FIM__c</referenceTo>
        <relationshipLabel>Customer Pricing</relationshipLabel>
        <relationshipName>Product_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PH1_Description__c</fullName>
        <description>Defaults to the PH1 Description field from the Product table</description>
        <formula>Model_Number__r.PH1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Description__c</fullName>
        <description>Defaults to the PH2 Description field from the Product table</description>
        <formula>Model_Number__r.PH2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Description__c</fullName>
        <description>Defaults to the PH3 Description field from the Product table</description>
        <formula>Model_Number__r.PH3_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PH3 Description</label>
        <type>Text</type>
    </fields>
    <label>Customer Pricing</label>
    <nameField>
        <label>SJM ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>